Change in server.env

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 url = "mongodb+srv://ayushgarg:goyaltrubhi@cluster0.hapogki.mongodb.net/kms?retryWrites=true&w=majority&appName=Cluster0"
-FRONTEND_URL= "https://kms-project.netlify.app"
+FRONTEND_URL=https://kms-project.netlify.app
